Move Identity to Data project; Setup Tweeter methods

--- a/TwitterBackup.Web/Views/Manage/ChangePassword.cshtml
+++ b/TwitterBackup.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ChangePasswordViewModel
+﻿@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
