--- a/TwitterBackup.Web/Views/Manage/EnableAuthenticator.cshtml
+++ b/TwitterBackup.Web/Views/Manage/EnableAuthenticator.cshtml
@@ -1,4 +1,5 @@
-﻿@model EnableAuthenticatorViewModel
+﻿@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
