--- a/TwitterBackup.Web/Views/Manage/SetPassword.cshtml
+++ b/TwitterBackup.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model SetPasswordViewModel
+﻿@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
