--- a/TwitterBackup.Web/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/TwitterBackup.Web/Views/Manage/TwoFactorAuthentication.cshtml
@@ -1,4 +1,5 @@
-@model TwoFactorAuthenticationViewModel
+@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.TwoFactorAuthenticationViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
