--- a/TwitterBackup.Web/Views/Manage/ExternalLogins.cshtml
+++ b/TwitterBackup.Web/Views/Manage/ExternalLogins.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExternalLoginsViewModel
+﻿@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.ExternalLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
