--- a/TwitterBackup.Web/Views/Manage/Index.cshtml
+++ b/TwitterBackup.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IndexViewModel
+﻿@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.IndexViewModel
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
