--- a/TwitterBackup.Web/Views/Manage/ShowRecoveryCodes.cshtml
+++ b/TwitterBackup.Web/Views/Manage/ShowRecoveryCodes.cshtml
@@ -1,4 +1,5 @@
-﻿@model ShowRecoveryCodesViewModel
+﻿@using TwitterBackup.Web.Models.ManageViewModels
+@model TwitterBackup.Web.Models.ManageViewModels.ShowRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
