--- a/TwitterBackup.Web/Views/Manage/ChangePassword.cshtml
+++ b/TwitterBackup.Web/Views/Manage/ChangePassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.ChangePasswordViewModel
+﻿@model ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
