--- a/TwitterBackup.Web/Views/Manage/EnableAuthenticator.cshtml
+++ b/TwitterBackup.Web/Views/Manage/EnableAuthenticator.cshtml
@@ -1,5 +1,4 @@
-﻿@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.EnableAuthenticatorViewModel
+﻿@model EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
