--- a/TwitterBackup.Web/Views/Manage/Index.cshtml
+++ b/TwitterBackup.Web/Views/Manage/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.IndexViewModel
+﻿@model IndexViewModel
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
