--- a/TwitterBackup.Web/Views/Manage/SetPassword.cshtml
+++ b/TwitterBackup.Web/Views/Manage/SetPassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.SetPasswordViewModel
+﻿@model SetPasswordViewModel
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
