--- a/TwitterBackup.Web/Views/Manage/ShowRecoveryCodes.cshtml
+++ b/TwitterBackup.Web/Views/Manage/ShowRecoveryCodes.cshtml
@@ -1,5 +1,4 @@
-﻿@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.ShowRecoveryCodesViewModel
+﻿@model ShowRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
