--- a/TwitterBackup.Web/Views/Manage/ExternalLogins.cshtml
+++ b/TwitterBackup.Web/Views/Manage/ExternalLogins.cshtml
@@ -1,5 +1,4 @@
-﻿@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.ExternalLoginsViewModel
+﻿@model ExternalLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
