--- a/TwitterBackup.Web/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/TwitterBackup.Web/Views/Manage/TwoFactorAuthentication.cshtml
@@ -1,12 +1,11 @@
-@using TwitterBackup.Web.Models.ManageViewModels
-@model TwitterBackup.Web.Models.ManageViewModels.TwoFactorAuthenticationViewModel
+@model TwoFactorAuthenticationViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
 }
 
 <h4>@ViewData["Title"]</h4>
-@if (Model.Is2faEnabled)
+@if (Model.Is2FaEnabled)
 {
     if (Model.RecoveryCodesLeft == 0)
     {
@@ -30,7 +29,7 @@
         </div>
     }
 
-    <a asp-action="Disable2faWarning" class="btn btn-default">Disable 2FA</a>
+    <a asp-action="Disable2FaWarning" class="btn btn-default">Disable 2FA</a>
     <a asp-action="GenerateRecoveryCodesWarning" class="btn btn-default">Reset recovery codes</a>
 }
 
