--- a/TwitterBackup.Web/Views/Manage/_ManageNav.cshtml
+++ b/TwitterBackup.Web/Views/Manage/_ManageNav.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using TwitterBackup.Web.Models
-@using TwitterBackup.Web.Views.Manage
+﻿@using TwitterBackup.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
