--- a/TwitterBackup.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,4 @@
-@using Microsoft.AspNetCore.Identity
-@using TwitterBackup.Web.Models
-
+@using TwitterBackup.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
