Search tweeters added.

--- a/TwitterBackup.Web/Views/Account/Login.cshtml
+++ b/TwitterBackup.Web/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Linq
 @using TwitterBackup.Models
 @model LoginViewModel
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<User> SignInManager
 
 @{
     ViewData["Title"] = "Log in";
