--- a/TwitterBackup.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 @using TwitterBackup.Models
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
