--- a/TwitterBackup.Web/wwwroot/css/site.css
+++ b/TwitterBackup.Web/wwwroot/css/site.css
@@ -33,3 +33,20 @@
         display: none;
     }
 }
+
+/* Search bar*/
+.search-input {
+    background-color: #f5f8fa;
+    border-radius: 21px;
+    border: 1px solid #e6ecf0;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #14171a;
+    display: block;
+    font-size: 12px;
+    height: 32px;
+    line-height: 16px;
+    padding: 8px 32px 8px 12px;
+    transition: all .2s ease-in-out;
+    width: 100%;
+}
