--- a/TwitterBackup.Web/Views/FavouriteTweeters/SearchResults.cshtml
+++ b/TwitterBackup.Web/Views/FavouriteTweeters/SearchResults.cshtml
@@ -33,3 +33,45 @@
     </div>
 </body>
 </html>
+
+
+@section Scripts {
+    <script>
+        $(function () {
+            $('.tweeter-form').on('submit',
+                function (event) {
+
+                    event.preventDefault();
+
+                    var url = this.action;
+                    var data = $(this).serialize();
+                    var tweeterId = this.getAttribute('tweeter-id');
+
+                    $.post(url, data, function (response) {
+
+
+                        if (String(response) === "success") {
+
+                            var tweeterBtn = $('#' + tweeterId);
+
+                            console.log(this);
+                            console.log(tweeterBtn);
+                            if (tweeterBtn.hasClass('btn-following')) {
+                                tweeterBtn.removeClass('btn-following');
+                                tweeterBtn.addClass('btn-follow');
+                                tweeterBtn.text('Follow');
+                            } else {
+                                tweeterBtn.removeClass('btn-follow');
+                                tweeterBtn.addClass('btn-following');
+                                tweeterBtn.text('Following');
+                            }
+
+                        } else {
+                            alert('failure');
+                        }
+                    });
+
+                });
+        });
+    </script>
+}
