--- a/TwitterBackup.Web/Views/FavouriteTweeters/_FavouriteTweeter.cshtml
+++ b/TwitterBackup.Web/Views/FavouriteTweeters/_FavouriteTweeter.cshtml
@@ -1,12 +1,7 @@
 ﻿@model TwitterBackup.Web.Models.TweeterViewModels.TweeterViewModel
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-@*<link rel="stylesheet" href="~/css/tweeter.css" />*@
+<link rel="stylesheet" href="~/css/tweeter.css" />
 
 
 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
@@ -45,27 +40,49 @@
             </div>
         </div>
         <div class="bottom">
-            @{
-                if (Model.IsLikedFromUser)
-                {
-                    <div class="btn-following">
-                        <a class="following btn-follow-pic" href="#">
-                            <i class="fa fa-twitter"></i>
-                            Following
-                        </a>
+            <form class="tweeter-form" asp-controller="FavouriteTweeters" asp-action="AddTweeterToFavourite" method="post" tweeter-id="@Model.TweeterId">
+
+                @{
+                    <div class="tweeter-model-hiden-input" style="display: none;">
+                        <input asp-for="TweeterId" class="form-control" />
+                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="ScreenName" class="form-control" />
+                        <input asp-for="ProfileImageUrl" class="form-control" />
+                        <input asp-for="ProfileBannerUrl" class="form-control" />
+                        <input asp-for="CreatedAt" class="form-control" />
+                        <input asp-for="Description" class="form-control" />
+                        <input asp-for="FollowersCount" class="form-control" />
+                        <input asp-for="FriendsCount" class="form-control" />
+                        <input asp-for="Lang" class="form-control" />
+                        <input asp-for="Location" class="form-control" />
+                        <input asp-for="TweetsCount" class="form-control" />
+                        <input asp-for="Verified" class="form-control" />
+                        <input asp-for="IsLikedFromUser" class="form-control" />
                     </div>
+                    if (Model.IsLikedFromUser)
+                    {
+                        <div class="follow-div">
+                            <button type="submit" class="btn-tweeter btn-following btn-follow-pic" id="@Model.TweeterId">
+                                <i class="fa fa-twitter"></i>
+                                Following
+                            </button>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="follow-div">
+                            <button type="submit" class="btn-tweeter btn-follow btn-follow-pic" id="@Model.TweeterId">
+                                <i class="fa fa-twitter"></i>
+                                Follow
+                            </button>
+                        </div>
+                    }
                 }
-                else
-                {
-                    <div class="btn-follow">
-                        <a class="btn-follow-pic" href="#">
-                            <i class="fa fa-twitter"></i>
-                            Follow
-                        </a>
-                    </div>
-                }
-            }
+            </form>
         </div>
     </div>
 </div>
+
+
+
 
