--- a/TwitterBackup.Web/Views/FavouriteTweeters/SearchResults.cshtml
+++ b/TwitterBackup.Web/Views/FavouriteTweeters/SearchResults.cshtml
@@ -31,13 +31,23 @@
             }
         }
     </div>
-    <div class="modal fade" role="dialog">
+
+    <div class="modal fade">
         <div class="modal-dialog">
-            <div class="modal-content error-modal">
-                <!-- load dynamically event modal html -->
-            </div>
-        </div>
-    </div>
+            <div class="modal-content" id="error-modal">
+                <div class="modal-header" style="background-color: red; color:white">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h2 class="modal-title">Error</h2>
+                </div>
+                <div class="modal-body">
+                    <h4 class="modal-error-message"></h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </body>
 </html>
 
@@ -62,6 +72,15 @@
 
                             console.log(response);
                             //add error modal
+                            var modalContent = $('#error-modal');
+                            var modalErrorMessage = $('.modal-error-message');
+                            modalErrorMessage.text(response);
+
+                            modalContent.load(url,
+                                function () {
+                                    var modal = $('.modal');
+                                    modal.modal('show');
+                                });
                             return;
                         }
 
@@ -87,29 +106,29 @@
     </script>
 
     <script>
-                //$(document).on("mouseenter", ".btn-following", function () {
-                //    var btn = $(this);
+        $(document).on("mouseenter", ".btn-following", function () {
+            var btn = $(this);
 
-                //    btn.css("background-color", "red");
-                //    btn.html('Unfollow');
-                //});
+            btn.css("background-color", "red");
+            btn.html('Unfollow');
+        });
 
-                //$(document).on("mouseleave", ".btn-following", function () {
-                //    var btn = $(this);
+        $(document).on("mouseleave", ".btn-following", function () {
+            var btn = $(this);
 
-                //    btn.html('<i class="fa fa-twitter"></i> Following');
-                //    btn.css("background-color", "#427fed");
-                //});
+            btn.html('<i class="fa fa-twitter"></i> Following');
+            btn.css("background-color", "#427fed");
+        });
 
-                //$(document).on("mouseenter", ".btn-follow", function () {
-                //    var btn = $(this);
-                //    btn.css("background-color", "#E8F5FD");
+        $(document).on("mouseenter", ".btn-follow", function () {
+            var btn = $(this);
+            btn.css("background-color", "#E8F5FD");
 
-                //});
+        });
 
-                //$(document).on("mouseleave", ".btn-follow", function () {
-                //    var btn = $(this);
-                //    btn.css("background-color", "white");
-                //});
+        $(document).on("mouseleave", ".btn-follow", function () {
+            var btn = $(this);
+            btn.css("background-color", "white");
+        });
     </script>
 }
