--- a/TwitterBackup.Web/Views/Tweets/Delete.cshtml
+++ b/TwitterBackup.Web/Views/Tweets/Delete.cshtml
@@ -8,7 +8,7 @@
 <div>
 
     <dl class="dl-horizontal">
-        @if ((bool)ViewData["IsAdmin"])
+        @if ((bool)@ViewData["IsAdmin"])
         {
 
             <dt>
