--- a/TwitterBackup.Web/Views/Shared/_Layout.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Tweeters" asp-action="Index">Favorite Tweeters</a></li>
+                    <li><a asp-area="" asp-controller="Tweets" asp-action="Index">Saved Tweets</a></li>
                     @*  <li>@await Html.PartialAsync("_SearchBar")</li>*@
                 </ul>
                 @await Html.PartialAsync("_SearchBar")
