--- a/TwitterBackup.Web/Views/Tweeters/SearchResults.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/SearchResults.cshtml
@@ -12,7 +12,7 @@
     <div>
         <h1>Search Results</h1>
         @{
-            if (Model != null)
+            if (Model.Any())
             {
                 <div class="">
                     <div class="row">
