--- a/TwitterBackup.Web/Views/Tweeters/_FavouriteTweeter.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/_FavouriteTweeter.cshtml
@@ -45,7 +45,7 @@
                 var btnClass = Model.IsLikedFromUser ? "btn-following" : "btn-follow";
                 var btnText = Model.IsLikedFromUser ? "Following" : "Follow";
 
-                <form class="tweeter-form" asp-controller="FavouriteTweeters" asp-action=@action method="post" tweeter-id="@Model.TweeterId">
+                <form class="tweeter-form" asp-controller="Tweeters" asp-action=@action method="post" tweeter-id="@Model.TweeterId">
 
                     <div class="tweeter-model-hiden-input" style="display: none;">
                         <input asp-for="TweeterId" class="form-control" />
